# Cutting-Plane-Generators

./: .gitignore  CMakeLists.txt  Cutting_Plane_Generators  README.md  b-inv.sh  env.txt  exp1.py  lol.txt  main  main.cpp  script.sh  test.ipynb  
.ipynb_checkpoints/: test-checkpoint.ipynb
CutsGenerator/: .clang-format  CMakeLists.txt  main.cpp  settings.txt
CutsGenerator/files/cutted-instances/: plane_cutted.lp
CutsGenerator/files/tests/: matrix_parse_test_1.lp  matrix_parse_test_2.lp  matrix_parse_test_3.lp  matrix_parse_test_5.lp
CutsGenerator/include/cuts/: cutter.h  gmi_tests.h
CutsGenerator/include/model/: model.h
CutsGenerator/include/scalars/: rational.h  scalar.h
CutsGenerator/include/testing/: tests.h
CutsGenerator/include/utils/: highs_utils.h  utils.h
CutsGenerator/src/cuts/: cutter.cpp  gmi.cpp  mir.cpp
CutsGenerator/src/model/: model.cpp
CutsGenerator/src/scalars/: scalar.cpp
CutsGenerator/src/testing/: tests.cpp
CutsGenerator/src/utils/: highs_utils.cpp
b-inv-part/: b_inv.py  environment.yml  main.py  testsdata.txt
b-inv-part/tests/: task.lp  task.mps
files/: b-inv.txt  b-inv.txt  cuts.txt  data.txt  plane-sol.txt  plane.lp  plane.mps  plane_cutted.lp  plane_milp.mps  task.lp  task.mps  task_cutted.lp
generator/: main.cpp
headers/cuts/: cutter.h
headers/linalg/: linalg.h
headers/parser/: parser.h
tests_miplib/: beasleyC3.mps  beasleyC3_cutted.lp  graph20-20-1rand.mps  roll3000.mps  roll3000_cutted.lp  tests.txt
z-python-scripts/: prepare_data.py  pyscipoptcuts.py  testing.py  write_cuts_in_lp.py
(+29 files in other folders)
